[package]
name = "socks-rust"
version = "0.1.2"
authors = ["Yeuham Wang <rcold@rcold.name>"]
edition = "2024"
license = "Apache-2.0"
description = "A minimal SOCKS server implementation written in Rust"

[dependencies]

[dependencies.clap]
version = "4"
default-features = false
features = ["derive", "help", "std", "usage"]

[dependencies.env_logger]
version = "0"
default-features = false
features = ["auto-color", "humantime"]

[dependencies.log]
version = "0"
default-features = false

[dependencies.tokio]
version = "1"
default-features = false
features = ["io-util", "macros", "net", "rt", "rt-multi-thread", "sync"]
